# discovery

./: .gitignore  .travis.yml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TranslationTableEmbedded.md  book.toml  clean.sh  ga.sh  index.html  memory.x  print.html  searcher-c2a407aa.js  searchindex-70440d8d.js  searchindex.js  searchindex.json  test.sh  toc-65223ccd.js  toc.html  toc.js
.github/: CODEOWNERS  bors.toml
.github/workflows/: ci.yml
ci/: after-success.sh  install.ps1  install.sh  run-docker.sh  run.sh  script.sh
f3discovery/: 404.html  Cargo.toml  book.toml  custom.css  explore.html  index.html  openocd.gdb  print.html  searcher-c2a407aa.js  searchindex-40094b7b.js  searchindex.js  searchindex.json  toc-7874d9cf.js  toc.html  toc.js
f3discovery/01-background/: index.html
f3discovery/02-requirements/: index.html
f3discovery/03-setup/: index.html  linux.html  macos.html  verify.html  windows.html
f3discovery/04-meet-your-hardware/: index.html
f3discovery/05-led-roulette/: build-it.html  debug-it.html  flash-it.html  index.html  my-solution.html  the-challenge.html  the-led-and-delay-abstractions.html
f3discovery/06-hello-world/: Cargo.toml  index.html  panic.html
f3discovery/07-registers/: bad-address.html  index.html  openocd.gdb  optimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
f3discovery/08-leds-again/: Cargo.toml  configuration.html  index.html  power.html  the-solution.html
f3discovery/09-clocks-and-timers/: busy-waiting.html  for-loop-delays.html  index.html  initialization.html  nop.html  one-shot-timer.html  putting-it-all-together.html
f3discovery/10-serial-communication/: index.html  loopbacks.html  nix-tooling.html  windows-tooling.html
f3discovery/11-usart/: Cargo.toml  buffer-overrun.html  echo-server.html  index.html  my-solution.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html  uprintln.html
f3discovery/12-bluetooth-setup/: at-commands.html  index.html  linux.html  loopback.html
f3discovery/13-serial-over-bluetooth/: index.html
f3discovery/14-i2c/: Cargo.toml  index.html  lsm303dlhc.html  read-a-single-register.html  read-several-registers.html  the-general-protocol.html  (+1 more)
f3discovery/src/05-led-roulette/auxiliary/: Cargo.toml
f3discovery/src/07-registers/auxiliary/: Cargo.toml
microbit/: 404.html  Cargo.toml  book.toml  explore.html  index.html  print.html  searcher-c2a407aa.js  searchindex-aae6120a.js  searchindex.js  searchindex.json  toc-ea0b330f.js  toc.html  toc.js
microbit/05-led-roulette/: Cargo.toml  Embed.toml  build-it.html  debug-it.html  flash-it.html  index.html  it-blinks.html  light-it-up.html  my-solution.html  the-challenge.html
microbit/05-led-roulette/examples/: my-solution.rs
microbit/07-uart/: Cargo.toml  echo-server.html  index.html  my-solution.html  naive-approch-write.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html
microbit/07-uart/src/: main.rs  serial_setup.rs
microbit/11-snake-game/: Cargo.toml  Embed.toml  controls.html  game-logic.html  index.html  nonblocking-display.html
microbit/11-snake-game/src/: control.rs  display.rs  game.rs  main.rs  main_take_1.rs
microbit/src/05-led-roulette/: Cargo.toml  Embed.toml  README.md  build-it.md  build.rs  debug-it.md  flash-it.md  it-blinks.md  light-it-up.md  my-solution.md  the-challenge.md
microbit/src/05-led-roulette/examples/: it-blinks-1.rs  it-blinks-2.rs  light-it-up.rs  my-solution.rs  the-challenge.rs
microbit/src/05-led-roulette/src/: main.rs
microbit/src/08-i2c/: Cargo.toml  README.md  lsm303agr.md  my-solution.md  read-a-single-register.md  the-challenge.md  the-general-protocol.md  using-a-driver.md
microbit/src/08-i2c/src/: serial_setup.rs
microbit/src/10-punch-o-meter/: Cargo.toml  README.md  gravity-is-up.md  my-solution.md  the-challenge.md
microbit/src/11-snake-game/: Cargo.toml  README.md  controls.md  game-logic.md  nonblocking-display.md
microbit/src/11-snake-game/src/: main.rs  main_controls.rs
src/: README.md  SUMMARY.md  explore.md  openocd.gdb
src/05-led-roulette/: Cargo.toml  Embed.toml  README.md  build-it.md  debug-it.md  flash-it.md  it-blinks.md  light-it-up.md  my-solution.md  the-challenge.md  the-led-and-delay-abstractions.md  the-led-and-delay-modules.md
src/05-led-roulette/.cargo/: config  config.toml
src/05-led-roulette/aux/: Cargo.toml
src/05-led-roulette/auxiliary/: Cargo.toml
src/05-led-roulette/auxiliary/src/: lib.rs
src/05-led-roulette/pg/: Cargo.toml
src/05-led-roulette/pg/src/: lib.rs
src/05-led-roulette/src/: main.rs
src/06-hello-world/: .gdbinit  Cargo.toml  README.md  openocd.gdb  panic.md
src/06-hello-world/.cargo/: config
src/06-hello-world/auxiliary/: Cargo.toml
src/06-hello-world/auxiliary/src/: lib.rs
src/06-hello-world/pg/: Cargo.toml
src/06-hello-world/pg/src/: lib.rs
src/06-hello-world/src/: main.rs
src/07-uart/: Cargo.toml  Embed.toml  README.md  echo-server.md  my-solution.md  naive-approch-write.md  naive-approch-writeln.md  receive-a-single-byte.md  reverse-a-string.md  send-a-single-byte.md  send-a-string.md  uprintln.md
src/07-uart/src/: main.rs
src/08-i2c/: Cargo.toml  Embed.toml  my-solution.md  read-a-single-register.md  the-challenge.md  the-general-protocol.md  the-solution.md  using-a-driver.md
src/08-i2c/.cargo/: config
src/08-i2c/auxiliary/src/: lib.rs
src/08-i2c/src/: main.rs
src/10-punch-o-meter/: Cargo.toml  gravity-is-up.md  the-challenge.md
src/11-usart/: .gdbinit  Cargo.toml  README.md  buffer-overrun.md  echo-server.md  my-solution.md  receive-a-single-byte.md  reverse-a-string.md  send-a-single-byte.md  send-a-string.md  uprintln.md
src/11-usart/auxiliary/: Cargo.toml
src/11-usart/auxiliary/src/: lib.rs
src/11-usart/examples/: buffer-overrun-txe.rs  buffer-overrun.rs  echo.rs  receive-a-single-byte.rs  reverse-string.rs  the-answer.rs
src/11-usart/pg/src/: lib.rs
src/11-usart/src/: main.rs
(+459 files in other folders)
