# [dependencies]
# "led-roulette" = { path = "src/05-led-roulette" }
# "hello-world" = { path = "src/06-hello-world" }
# "registers" = { path = "src/07-registers" }
# "leds-again" = { path = "src/08-leds-again" }
# "clocks-and-timers" = { path = "src/09-clocks-and-timers" }
# "usart" = { path = "src/11-usart" }
# "i2c" = { path = "src/14-i2c" }
# "led-compass" = { path = "src/15-led-compass" }
# "punch-o-meter" = { path = "src/16-punch-o-meter" }

[workspace]
members = [
  "src/05-led-roulette",
  "src/06-hello-world",
  "src/07-registers",
  "src/08-leds-again",
  "src/09-clocks-and-timers",
  "src/11-usart",
  "src/14-i2c",
  "src/15-led-compass",
  "src/16-punch-o-meter",
]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true