[package]
name = "led-roulette"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

[dependencies.microbit-v2]
version = "0.11.0"
git = "https://github.com/nrf-rs/microbit/"
optional = true


[dependencies.microbit]
version = "0.11.0"
git = "https://github.com/nrf-rs/microbit/"
optional = true

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
