[package]
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
name = "i2c"
version = "0.1.0"

[dependencies.microbit-v2]
version = "0.10.1"
git = "https://github.com/hargonix/microbit/"
optional = true


[dependencies.microbit]
version = "0.10.1"
git = "https://github.com/hargonix/microbit/"
optional = true

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
nb = "1.0.0"
heapless = "0.5.6"
lsm303agr = "0.1.1"
embedded-hal = "0.2.6"

[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
