[package]
name = "punch-o-meter"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

[dependencies.microbit-v2]
version = "0.11.0"
git = "https://github.com/nrf-rs/microbit/"
optional = true


[dependencies.microbit]
version = "0.11.0"
git = "https://github.com/nrf-rs/microbit/"
optional = true

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.6.12"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
lsm303agr = "0.2.0"
nb = "1.0.0"

[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
