[package]
name = "led-roulette"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2021"

[dependencies.microbit-v2]
version = "0.15.0"
optional = true

[dependencies.microbit]
version = "0.15.0"
optional = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
# rtt-target = "0.5.0"
# panic-rtt-target = "0.1.3"

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = "0.5.0"
panic-rtt-target = "0.1.3"

[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]
