[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Christopher J. McClellan <chris.mcclellan203@gmail.com>",
    "Wink Saville <wink@saville.com",
]
edition = "2018"
name = "aux5"
version = "0.2.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
stm32f3-discovery = "0.6.0"
panic-itm = "0.4.2"
